2010-12-10  Roland Levillain  <roland@lrde.epita.fr>

	Ensure non implemented reconstructions on sets abort at run time.

	* mln/morpho/reconstruction/by_dilation/union_find.hh,
	* mln/morpho/reconstruction/by_erosion/union_find.hh
	(union_find_dispatch(image::kind::logic, Image, Image, Neighborhood)):
	Here.
	* tests/morpho/reconstruction/by_dilation/union_find.cc,
	* tests/morpho/reconstruction/by_erosion/union_find.cc:
	Rename as...
	* tests/morpho/reconstruction/by_dilation/union_find_on_functions.cc,
	* tests/morpho/reconstruction/by_erosion/union_find_on_functions.cc:
	...these.
	* tests/morpho/reconstruction/by_dilation/union_find_on_sets.cc,
	* tests/morpho/reconstruction/by_erosion/union_find_on_sets.cc:
	New tests.
	* tests/morpho/reconstruction/by_dilation/Makefile.am,
	* tests/morpho/reconstruction/by_erosion/Makefile.am:
	Adjust.
	(check_PROGRAMS): Add union_find_on_sets.
	(union_find_on_sets_SOURCES): New.
	(XFAIL_TESTS): New.  Add union_find_on_sets.

2010-11-29  Roland Levillain  <roland@lrde.epita.fr>

	Work around g++ 4.5 deficiencies to compile Milena.

	* mln/core/concept/proxy.hxx
	(internal::helper_unproxy_rec< P, true >::P_)
	(internal::helper_unproxy_rec< const P, true >::P_):
	Remove these intermediate typedefs...
	(internal::helper_unproxy_rec< P, true >::ret)
	(internal::helper_unproxy_rec< const P, true >::ret):
	...to inline these definitions.
	* mln/util/array.hh
	(internal::subject_impl<util::array<T>&, E>::operator())
	(internal::subject_impl<util::array<T>&, E>::operator[])
	(internal::subject_impl<const util::array<T>&, E>::operator() const)
	(internal::subject_impl<const util::array<T>&, E>::operator[] const):
	* mln/core/site_set/p_graph_piter.hh
	(internal::subject_impl< const p_graph_piter<S,I>&, E >::graph):
	Use the exact same return type as in the declaration.

2010-11-29  Roland Levillain  <roland@lrde.epita.fr>

	Fix forward declarations in complex piters.

	* mln/core/site_set/p_complex_piter.hh,